--- a/scss/customize.scss
+++ b/scss/customize.scss
@@ -4,5 +4,7 @@
 @import 'button/button';
 @import 'detailPage/detail-page';
 @import 'header/header';
+@import 'footer/footer';
 @import 'mobile/home';
 @import 'section/section';
+@import 'general/general';
