--- a/css/header/header.css
+++ b/css/header/header.css
@@ -35,8 +35,12 @@
   color: #253342;
 }
 .header__bottom {
-  opacity: 0;
   background: linear-gradient(to bottom, #f0f0f0 0%, #ffffff 100%);
+}
+@media screen and (max-width: 767px) {
+  .header__bottom {
+    opacity: 0;
+  }
 }
 @media screen and (max-width: 767px) {
   .header__bottom > .container {
@@ -70,6 +74,11 @@
   list-style: none;
   margin: 0 16px;
   padding: 16px 0;
+}
+@media screen and (max-width: 767px) {
+  .header__bottom > .container nav ul li {
+    margin: 0;
+  }
 }
 .header__bottom > .container nav ul li a {
   color: #253342;
