--- a/scss/header/header.scss
+++ b/scss/header/header.scss
@@ -48,8 +48,11 @@
   }
 
   &__bottom {
-    opacity: 0;
     background: linear-gradient(to bottom, #f0f0f0 0%,#ffffff 100%);
+
+    @media screen and (max-width: 767px) {
+      opacity: 0;
+    }
 
     > .container {
       @media screen and (max-width: 767px) {
@@ -83,6 +86,10 @@
             list-style: none;
             margin: 0 16px;
             padding: 16px 0;
+
+            @media screen and (max-width: 767px) {
+              margin: 0;
+            }
 
             a {
               color: #253342;
