--- a/scss/section/section.scss
+++ b/scss/section/section.scss
@@ -1,6 +1,13 @@
+.section {
+  padding: 60px 0;
+
+  @media screen and (max-width: 767px) {
+    padding: 30px;
+  }
+}
+
 .section--studio-contents {
   .contents-wrapper {
-
     > div {
       display: flex;
       align-items: flex-start;
@@ -11,6 +18,10 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
       }
     }
 
@@ -81,6 +92,251 @@
           }
         }
       }
+    }
+  }
+}
+
+.u-section-3 {
+  @media screen and (max-width: 767px) {
+    padding: 0 30px;
+  }
+
+  .u-image-1 {
+    @media screen and (max-width: 767px) {
+      margin: -130px auto 0;
+      width: calc(100vw - 60px);
+      height: calc(100vw - 60px);
+      max-width: 460px;
+      max-height: 460px;
+    }
+  }
+  .u-image-2 {
+    @media screen and (max-width: 767px) {
+      width: calc(80vw - 60px);
+      height: calc(80vw - 60px);
+      max-width: 300px;
+      max-height: 300px;
+      margin-top: -110px;
+      margin-right: 0px;
+    }
+  }
+
+  .u-shape-1 {
+    @media screen and (max-width: 767px) {
+      margin: 0;
+      width: calc(50vw - 100px);
+      height: calc(50vw - 100px);
+      max-width: 200px;
+      max-height: 200px;
+    }
+  }
+  .u-shape-2 {
+    @media screen and (max-width: 767px) {
+      max-width: 90px;
+      max-height: 90px;
+      margin-top: -250px;
+      margin-right: 0;
+    }
+  }
+
+  .u-sheet {
+    @media screen and (max-width: 767px) {
+      width: 100% !important;
+    }
+  }
+
+  .u-sheet-1 {
+    @media screen and (max-width: 767px) {
+      min-height: auto;
+    }
+  }
+
+  .u-group-1 {
+    @media screen and (max-width: 767px) {
+      width: 100%;
+      margin-top: 0;
+      min-height: auto;
+      order: 5;
+    }
+  }
+}
+
+.u-section-4 {
+  @media screen and (max-width: 991px) {
+    width: 100%;
+    padding: 0 30px;
+    background: #A45A95;
+  }
+
+  .u-image-1, .u-image-2, .u-image-3 {
+    @media screen and (max-width: 991px) {
+      width: 304px;
+      height: 304px;
+    }
+  }
+
+  .u-layout-cell-1, .u-layout-cell-2, .u-layout-cell-3, .u-layout-cell-4, .u-layout-cell-5, .u-layout-cell-6 {
+    @media screen and (max-width: 991px) {
+      min-height: auto;
+    }
+  }
+
+  .u-container-layout-1, .u-container-layout-2, .u-container-layout-3, .u-container-layout-4, .u-container-layout-5, .u-container-layout-6 {
+    @media screen and (max-width: 991px) {
+      padding: 0;
+      text-align: center;
+    }
+  }
+
+  .u-layout-wrap-1 {
+    width: 100%;
+    max-width: 1160px;
+    padding: 0 10px;
+
+    &:before {
+      @media screen and (max-width: 991px) {
+        left: -30px;
+        transform: translateX(0);
+      }
+    }
+  }
+
+  .u-layout-col {
+    @media screen and (max-width: 991px) {
+      align-items: center;
+    }
+  }
+
+  .u-layout-wrap:not(.u-layout-custom-sm) .u-layout-row > * {
+    @media screen and (max-width: 991px) {
+      min-width: 100%;
+    }
+  }
+}
+
+.u-section-7 {
+  padding-top: 200px;
+  padding-bottom: 40px;
+
+  @media screen and (max-width: 991px) {
+    padding: 60px 0;
+  }
+
+  > div {
+    max-width: 1140px;
+    margin: 0 auto;
+
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      max-width: 940px;
+    }
+
+    @media screen and (max-width: 991px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0 30px;
+      max-width: 700px;
+    }
+  }
+
+  .u-container-layout-1 {
+    @media screen and (max-width: 991px) {
+      padding: 50px 30px 30px 30px;
+      align-items: flex-start;
+    }
+  }
+
+  .u-group-1 {
+    @media screen and (max-width: 991px) {
+      width: 100%;
+      margin: -20px 0 0 0;
+      order: 2;
+      min-height: auto;
+    }
+  }
+
+  .u-image-1 {
+    @media screen and (max-width: 991px) {
+      width: 100%;
+      height: 100%;
+      max-height: 300px;
+      margin: 0;
+      z-index: 10;
+    }
+  }
+}
+
+.u-section-8 {
+
+  > div {
+    @media screen and (max-width: 991px) {
+      width: calc(100% - 30px) !important;
+      max-width: 540px !important;
+    }
+  }
+
+  .u-layout-cell-1 {
+    @media screen and (max-width: 991px) {
+      display: none;
+    }
+  }
+
+  .u-layout-wrap-1 {
+    @media screen and (max-width: 991px) {
+      margin-top: 90px;
+    }
+  }
+  .u-container-layout-3 {
+    @media screen and (max-width: 991px) {
+      justify-content: flex-start;
+    }
+  }
+
+  .u-layout-cell-2 {
+    @media screen and (max-width: 991px) {
+      width: 100%;
+      max-width: none;
+      flex: auto;
+    }
+  }
+  .u-container-layout-2 {
+    @media screen and (max-width: 991px) {
+      padding: 10px;
+    }
+  }
+
+  .u-group-1 {
+    position: absolute;
+    top: 30px;
+    left: 60px;
+
+    @media screen and (max-width: 991px) {
+      position: relative;
+      top: 0;
+      left: 0;
+      margin: -100px 0 40px 0;
+      width: 100%;
+    }
+  }
+
+  .map {
+    width: calc(100% - 92px);
+    height: 100%;
+    margin: 0 0 0 auto;
+
+    @media screen and (max-width: 991px) {
+      width: calc(100% - 32px);
+      height: 300px;
+      z-index: 10;
+      border-radius: 16px;
+      overflow: hidden;
+      margin: -180px auto 0;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
     }
   }
 }
