pages in proggress

--- a/scss/section/section.scss
+++ b/scss/section/section.scss
@@ -321,7 +321,7 @@
   }
 
   .map {
-    width: calc(100% - 92px);
+    width: calc(100% - 92px);https://github.com/mkirtay/trend-pilates.git
     height: 100%;
     margin: 0 0 0 auto;
 
